--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     }
   ],
   "dependencies": {
-    "grunt": "0.4.5",
+    "grunt": "^0.4.5",
     "archiver": "^0.14.3",
     "async": "~0.2.10",
     "chalk": "^1.0.0",
+	"grunt-contrib-clean": "0.6.0",
     "node-phantom-simple": "~1.2.0",
     "phantomjs": "~1.9.7",
     "st": "~0.2.3",
-    "jsftp": "1.5.0"
+    "jsftp": "1.5.0",
+    "grunt-contrib-copy":"0.8.0"
   }
 }
