--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-Detailing",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "none.",
   "homepage": "none",
   "author": {
@@ -24,6 +24,7 @@
     "phantomjs": "~1.9.7",
     "st": "~0.2.3",
     "jsftp": "1.5.0",
-    "grunt-contrib-copy":"0.8.0"
+    "grunt-contrib-copy":"0.8.0",
+    "grunt-contrib-rename": "^0.0.3"
   }
 }
